--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -56,7 +56,7 @@
                         <label class="btnnew">Doc Version</label>&nbsp;<img src="@Url.Content("~/images/btnNewVersion.jpg")" alt="IMAGES" class="btnimage-3" />
                     </li>
                     <li>
-                        <input type="text" id = "txtDocver"  name="field1" class="field-select-small-2" placeholder="V1" disabled />
+                        <input type="text" id = "txtDocver"  name="field1" class="field-select-small-2" placeholder="1" disabled />
                     </li>
                     <li>
                         <label>ใบเสนอราคา</label>
