--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -54,7 +54,7 @@
         <form>
             <ul class="form-style-1">
                 <li>
-                    <label class="btnnew">Doc Version</label>&nbsp;<img src="@Url.Content("~/images/btnNewVersion.jpg")" alt="IMAGES" class="btnimage-3" />
+                    <label class="btnnew">Doc Version</label>&nbsp;<img src="@Url.Content("~/images/btnNewVersion.jpg")" alt="IMAGES" class="btnimage-3" onclick="GetDocversion()" />
                 </li>
                 <li>
                     <input type="text" id="txtDocver" name="field1" class="field-select-small-2" placeholder="V1" disabled />
@@ -97,7 +97,7 @@
                                 <div class="resp-tabs-container hor_1">
                                     <div>
                                         <div class="barattach-2">
-                                            <a href="@Url.Action("CreateJobOrder", "JobOrder")" class="alink"><img src="@Url.Content("~/Images/btnAdd.png")" class="btnimage-2" /></a>
+                                   <a href="@Url.Action("CreateJobOrder", "JobOrder")?@Request.Params["id"]" class="alink"><img src="@Url.Content("~/Images/btnAdd.png")" class="btnimage-2" /></a>
                                         </div>
                                         <div class="grigbar">
                                             <div class="myDIV">
